--- a/src/assets/styles/modules/_colors.scss
+++ b/src/assets/styles/modules/_colors.scss
@@ -1,9 +1,9 @@
 :root {
+  // colors
   --primary: #5CB2F0;
   --primary-hover: #4ea0db;
   --error: #db4d4d;
   --success: rgb(69, 190, 99);
-
   --bg-light: #6484A3;
   --bg-dark: #284E72;
 }
